[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/lancer.gd" type="Script" id=1]
[ext_resource path="res://data/images/enemy3_lancer/lancer_forward.png" type="Texture" id=2]
[ext_resource path="res://data/images/enemy3_lancer/lancer_forwardleft.png" type="Texture" id=3]
[ext_resource path="res://data/images/enemy3_lancer/lancer_dying1.png" type="Texture" id=4]
[ext_resource path="res://data/images/enemy3_lancer/lancer_dying2.png" type="Texture" id=5]
[ext_resource path="res://data/images/enemy3_lancer/lancer_dying3.png" type="Texture" id=6]
[ext_resource path="res://data/images/enemy3_lancer/lancer_dying4.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 12.4299
height = 9.28876

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 12.6932, 28.5306 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 14.238, 23.243 )

[node name="lancer" type="KinematicBody2D"]

position = Vector2( 699.03, 335 )
z = 2
input_pickable = false
collision_layer = 4
collision_mask = 4
collision/margin = 0.08
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "default"

[node name="dying" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 1.46301, 13.4084 )
frames = SubResource( 2 )
animation = "default"
frame = 1

[node name="hit_rect" type="Area2D" parent="."]

input_pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 6.10352e-05, 25.5592 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_rect"]

position = Vector2( 6.10352e-05, 25.5592 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="lance_hit" type="Area2D" parent="."]

position = Vector2( 10.6384, -59.0896 )
scale = Vector2( 0.374751, 0.317739 )
input_pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, -1.13684, -0.755493 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="lance_hit"]

position = Vector2( -1.13684, -0.755493 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="lance_hitleft" type="Area2D" parent="."]

position = Vector2( -34.8879, -50.0978 )
scale = Vector2( 0.264688, 0.282558 )
input_pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 6.39282, 0.443542 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="lance_hitleft"]

position = Vector2( 6.39282, 0.443542 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[connection signal="body_entered"  from="hit_rect"  to="." method="_on_hit_rect_body_enter" binds=[  ]]

[connection signal="body_entered"  from="lance_hit"  to="." method="_on_lance_hit_body_enter" binds=[  ]]

[connection signal="body_exited"  from="lance_hit"  to="." method="_on_lance_hit_body_exit" binds=[  ]]

[connection signal="body_entered"  from="lance_hitleft"  to="." method="_on_lance_hitleft_body_enter" binds=[  ]]

[connection signal="body_exited"  from="lance_hitleft"  to="." method="_on_lance_hitleft_body_exit" binds=[  ]]
